--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -2,5 +2,7 @@
 <resources>
 
     <string name="app_name">NHS Coordinator</string>
+    <string name="channel_name">Coordinator</string>
+    <string name="channel_desc">The channel for sending coordination notifications</string>
 
 </resources>
